<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/very_dark_gray_calculator_bg"
    android:orientation="vertical"
    tools:context=".view.MainActivity"
    android:layout_weight="10"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:layout_marginBottom="2dp">

        <TextView
            android:id="@+id/displayTV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dark_gray_display"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="100sp"
            android:maxLines="1"
            android:padding="15dp"
            android:gravity="end|bottom"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7.5"
        android:layout_marginTop="6dp"
        android:orientation="vertical"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="4"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="4"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnSeven"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/seven"
                        android:textSize="90sp"
                        android:textStyle="bold"/>

                    <Button
                        android:id="@+id/btnFour"
                        android:text="@string/four"
                        android:textSize="90sp"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_marginEnd="2dp"
                        android:layout_marginStart="2dp"
                        />

                    <Button
                        android:id="@+id/btnOne"
                        android:text="@string/one"
                        android:textSize="90sp"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_marginEnd="2dp"
                        android:layout_marginStart="2dp"/>

                    <Button
                        android:id="@+id/btnZero"
                        android:text="@string/zero"
                        android:textSize="90sp"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_marginStart="2dp"/>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="4"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnEight"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/eight"
                        android:textSize="90sp"
                        android:textStyle="bold"/>

                    <Button
                        android:id="@+id/btnFive"
                        android:text="@string/five"
                        android:textSize="90sp"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_marginEnd="2dp"
                        android:layout_marginStart="2dp"
                        />

                    <Button
                        android:id="@+id/btnTwo"
                        android:text="@string/two"
                        android:textSize="90sp"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_marginEnd="2dp"
                        android:layout_marginStart="2dp"/>

                    <Button
                        android:id="@+id/btnPoint"
                        android:text="@string/point"
                        android:textSize="90sp"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_marginStart="2dp"/>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="4"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnNine"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/nine"
                        android:textSize="90sp"
                        android:textStyle="bold"/>

                    <Button
                        android:id="@+id/btnSix"
                        android:text="@string/six"
                        android:textSize="90sp"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_marginEnd="2dp"
                        android:layout_marginStart="2dp" />

                    <Button
                        android:id="@+id/btnThree"
                        android:text="@string/three"
                        android:textSize="90sp"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_marginEnd="2dp"
                        android:layout_marginStart="2dp"/>

                    <Button
                        android:id="@+id/btnEqual"
                        android:text="@string/equal"
                        android:textSize="90sp"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_marginStart="2dp"/>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:weightSum="5"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnDiv"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/divide"
                        android:textSize="65sp"
                        android:textStyle="bold"/>

                    <Button
                        android:id="@+id/btnMul"
                        android:text="@string/multiple"
                        android:textSize="65sp"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_marginEnd="2dp"
                        android:layout_marginStart="2dp"
                        />
                    <Button
                        android:id="@+id/btnSub"
                        android:text="@string/minus"
                        android:textSize="65sp"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_marginEnd="2dp"
                        android:layout_marginStart="2dp"/>

                    <Button
                        android:id="@+id/btnAdd"
                        android:text="@string/plus"
                        android:textSize="65sp"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_marginStart="2dp"/>

                    <Button
                        android:id="@+id/btnDelete"
                        android:text="@string/clear"
                        android:textSize="65sp"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_marginStart="2dp"/>

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


</LinearLayout>